# kavak_scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  etl_kavakv1.py  kavak_raw_data.jsonl  pyproject.toml  requirements.txt
docs/: README_public_draft.md  architecture.md  database.md  index.md  modules.md  notebooks.md  pipeline.md  setup.md
notebooks/: Logger.py  clean_to_sql.ipynb  jsonl_graph.ipynb  kavak_analytics.ipynb  kavak_analytivd.ipynb  kavak_cleaner.ipynb  kavak_clustering.ipynb  kavak_crawler.ipynb  kavak_enricher.ipynb  kavak_extractor.ipynb  kavak_fair_prices.ipynb  kavak_parser.ipynb  load_to_postgres.ipynb  parser.ipynb  query.ipynb  settings.py
src/: 01_crawler.py  02_parser.py  03_enricher.py  04_cleaner.py  Logger.py  clean_to_sql.py  crawler.py  database.py  enricher.py  etl_kavak_v1.py  kavak_crawler.py  kavak_enricher.py  kavak_extractor.py  kavak_parser.py  load_to_postgres.py  logger.py  models.py  parser.py  schemas.py  settings.py  url_crawler.py
tests/: apartado_test_extraction.ipynb  jsonl_graph.ipynb  test_extraction.py
