[project]
name = "kavak-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.13.5",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.0",
    "requests==2.32.5",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]
